# pynote

./: .gitignore  LICENSE  Makefile  README.md  pynote.cfg.example  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pipeline.yml
pynote/: __init__.py  __main__.py  config.py  engine.py
tests/: test_app.py  test_engine.py
