[tool.poetry]
name = "pynote"
version = "0.1.0"
description = "Note taking app."
authors = ["Euromancer <kysput@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
note = "pynote:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-commas = "^2.0.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.2.0"
pep8-naming = "^0.11.1"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
